test/regress/cov3-annotate-valexpr-missing-close.test
; Test error for valuation expression missing closing parentheses
; Covers annotate.cc (missing val expr closing parens)

2024/01/01 Test
    Assets:Brokerage    10 AAPL ((9)
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Brokerage    10 AAPL ((9)
                      ^^^^^^^^^^^^
Error: Commodity valuation expression lacks closing parentheses
end test
